# agentforge-echo-plugin

./: .mcp.json  .tapps-mcp.yaml  CLAUDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.cursor/: mcp.json
.github/workflows/: test.yml
agentforge_echo/: __init__.py  events.py  plugin.json  plugin.py  routes.py
agentforge_echo/agents/echo_agent/: AGENT.md  __init__.py  runner.py
tests/: test_agent.py  test_routes.py
