[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentforge-echo-plugin"
version = "1.0.0"
description = "Canonical test-rig plugin for AgentForge. Deterministic, zero external deps — the pre-release smoke gate for the plugin system."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.0",
]

[project.entry-points."agentforge.plugins"]
echo = "agentforge_echo"

[tool.hatch.build.targets.wheel]
packages = ["agentforge_echo"]

[tool.hatch.build.targets.wheel.force-include]
"agentforge_echo/plugin.json" = "agentforge_echo/plugin.json"
"agentforge_echo/agents/echo_agent/AGENT.md" = "agentforge_echo/agents/echo_agent/AGENT.md"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "httpx>=0.28",
]
